[project]
name = "warehouse-packing-env"
version = "0.1.0"
description = "OpenEnv warehouse packing environment"
authors = [
    {name = "Arshnoor Singh"},
    {name = "Krisha Jogiya"},
    {name = "Shivam Bilwadiya"}
]
dependencies = [
"fastapi",
"uvicorn",
"pydantic",
"requests",
"openai"
]

[tool.openenv]
entrypoint = "main:app"
