[project]
name = "warehouse-packing-env"
version = "0.1.0"
description = "OpenEnv warehouse packing environment"
requires-python = ">=3.10"
authors = [
    {name = "Arshnoor Singh"},
    {name = "Krisha Jogiya"},
    {name = "Shivam Bilwadiya"}
]
dependencies = [
"fastapi",
"uvicorn",
"pydantic",
"requests",
"openai",
"openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entrypoint = "server.app:app"
